Issue #16986: ElementTree now correctly parses a string input not only when an internal XML encoding is UTF-8 or US-ASCII.